<resources>
    <string name="app_name">Employee Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="employees_fragment_label">Employees</string>
    <string name="attribute_fragment_label">Attributes</string>
    <string name="map_fragment_label">Map</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="username">Username: %s</string>
    <string name="user_expiration_date">Expiration Date: %s</string>
    <string name="user_register_date">Registration date: %s</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_employees_create">Create</string>
    <string name="menu_attribute">Attribute</string>
    <string name="menu_map">Map</string>
    <string name="add_attribute">Add</string>
    <string name="search_attribute">Search</string>
</resources>