<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_employee">

    <fragment
        android:id="@+id/nav_employee"
        android:name="employee.android.ui.employees.EmployeesFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_attribute"
        android:name="employee.android.ui.attributes.AttributeFragment"
        android:label="@string/menu_attribute"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_map"
        android:name="employee.android.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_slideshow" />
</navigation>