<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/EmployeesFragment">

    <fragment
        android:id="@+id/EmployeesFragment"
        android:name="employee.android.ui.employees.EmployeesFragment"
        android:label="@string/employees_fragment_label"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/AttributeFragment"
        android:name="employee.android.ui.attributes.AttributeFragment"
        android:label="@string/attribute_fragment_label"
        tools:layout="@layout/fragment_attribute">
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="employee.android.ui.map.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">
    </fragment>
</navigation>